Fixes navbar collapsable

--- a/src/App.css
+++ b/src/App.css
@@ -148,7 +148,7 @@ nav ul li {
   flex-direction: row;
   justify-content: center;  
   background-color: var(--primary-gray);  
-  align-items: start;
+  align-items: flex-start;
   padding-bottom: 100px;
 }
 .portfolio-section h1 {
